turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: not found: value ind
  ind = trouverColor(colors, c)
  ^LangtonsAnt:6: error: not found: value nc
  nc = (ind+1)%nbc
  ^LangtonsAnt:7: error: not found: value r
  r = rule(ind)
  ^LangtonsAnt:8: error: not found: value r
  r match {
  ^LangtonsAnt:9: error: not found: value nc
    case 'R' => point(colors(nc)); droite(); avance()
                             ^LangtonsAnt:10: error: not found: value nc
    case 'L' => point(colors(nc)); gauche(); avance()
                             ^